@@ -18,7 +18,6 @@ from os import path
 from docutils import nodes
 
 from sphinx import addnodes
-from sphinx.locale import _
 from sphinx.builders.html import StandaloneHTMLBuilder
 
 
