@@ -8,6 +8,11 @@ Release 1.0 (in development)
 
 * Added a JavaScript domain.
 
+* Added a reStructuredText domain.
+
+* Added a way for intersphinx to refer to named labels in other
+  projects, and to specify the project you want to link to.
+
 * Support for docutils 0.4 has been removed.
 
 * Added Croatian translation, thanks to Bojan Mihelač.
